<resources>
    <string name="app_name">Balkan Radio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Balkan Radio</string>
    <string name="nav_header_subtitle">Ex-Yu Radio Stations</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_regions">All Regions</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_albania">Albania</string>
    <string name="menu_bosnia">Bosnia</string>
    <string name="menu_bulgaria">Bulgaria</string>
    <string name="menu_croatia">Croatia</string>
    <string name="menu_greece">Greece</string>
    <string name="menu_macedonia">Macedonia</string>
    <string name="menu_montenegro">Montenegro</string>
    <string name="menu_serbia">Serbia</string>
    <string name="menu_settings">Settings</string>

    <string name="now_playing_default">Not Playing</string>
    <string name="content_description_play">Play</string>
    <string name="content_description_pause">Pause</string>
    <string name="content_description_stop">Stop</string>
    <string name="content_description_back">Back</string>
    <string name="title_settings">Settings</string>
    <string name="title_enabled_regions">Enabled Regions</string>
    <string name="title_performance">Performance</string>
    <string name="label_power_saving">Power Saving Mode</string>
    <string name="desc_power_saving">Reduces UI animations and optimizes buffering to save battery life.</string>
    <string name="title_language">Language</string>
    <string name="label_select_language">Select App Language</string>
    <string name="lang_albanian">Albanian</string>
    <string name="lang_bosnian">Bosnian</string>
    <string name="lang_bulgarian">Bulgarian</string>
    <string name="lang_croatian">Croatian</string>
    <string name="lang_greek">Greek</string>
    <string name="lang_macedonian">Macedonian</string>
    <string name="lang_montenegrin">Montenegrin</string>
    <string name="lang_serbian">Serbian</string>
    <string name="lang_english">English</string>
    <string name="title_choose_region">Choose a Region</string>
    <string name="label_albania">Albania</string>
    <string name="label_bosnia">Bosnia</string>
    <string name="label_bulgaria">Bulgaria</string>
    <string name="label_croatia">Croatia</string>
    <string name="label_greece">Greece</string>
    <string name="label_macedonia">Macedonia</string>
    <string name="label_montenegro">Montenegro</string>
    <string name="label_serbia">Serbia</string>
    <string name="label_all_regions">All Regions</string>
    <string name="title_content">Content</string>
    <string name="label_refresh_stations">Check for new stations</string>
    <string name="desc_refresh_stations">Updates the list of radio stations from the server.</string>
    <string name="msg_stations_updated">Station list updated! Total: %1$d</string>
    <string name="msg_stations_update_failed">Failed to update stations. Please try again later.</string>
</resources>